wayland: add min/max size from xdg-shell v6

Bugzilla: https://bugzilla.gnome.org/show_bug.cgi?id=764413